@@ -1,31 +1,0 @@
-use strict;
-use warnings;
-use Module::Build;
-
-my $builder = Module::Build->new(
-    module_name => 'Catmandu::LDAP',
-    license => 'perl',
-    dist_author => [
-        'Nicolas Steenlant <nicolas.steenlant@ugent.be>'
-    ],
-    dist_version_from => 'lib/Catmandu/LDAP.pm',
-    build_requires => {
-        'Software::License' => 0,
-        'Test::Exception' => 0,
-        'Test::More' => 0,
-    },
-    requires => {
-        'perl' => '5.10.0',
-        'Catmandu' => '0.01',
-        'Moo' => '0.091004',
-        'Net::LDAP' => '0.44',
-    },
-    add_to_cleanup => [qw(
-        Catmandu-LDAP-*
-    )],
-    create_makefile_pl => 'traditional',
-    create_license => 1,
-);
-
-$builder->create_build_script;
-
