@@ -1,0 +1,25 @@
+# NAME
+
+Catmandu::LDAP - Catmandu modules for working with LDAP directories
+
+# VERSION
+
+Version 0.0103
+
+# MODULES
+
+- [Catmandu::Importer::LDAP](https://metacpan.org/pod/Catmandu::Importer::LDAP)
+
+# AUTHOR
+
+Nicolas Steenlant, `<nicolas.steenlant at ugent.be>`
+
+# LICENSE AND COPYRIGHT
+
+Copyright 2012 Ghent University Library
+
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
+
+See http://dev.perl.org/licenses/ for more information.
