@@ -1,0 +1,2 @@
+[@Milla]
+installer = ModuleBuild
